--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
-*.patch
+.patch
 .config
 
-
-
 # files produced by './configure.gnu' on a Linux machine
-Makefile.old
 /Makefile
 /Policy.sh
 /cflags
@@ -61,13 +58,108 @@ x2p/find2perl
 x2p/psed
 x2p/s2p
 
-# test byproduct
-ext/Test/Harness/t/ext/
-lib/App/
-lib/Archive/Tar/t/src/long/foo.tbz
-lib/Archive/Tar/t/src/short/foo.tbz
-lib/IPC/Cmd/t/src/x.tgz
-lib/TAP/
-lib/Test/Harness.pm
-t/rantests
-t/tmp*
+# files generated during the build
+
+ext/B/B.bs
+ext/B/B.c
+ext/B/Makefile
+ext/B/pm_to_blib
+ext/DB_File/DB_File.bs
+ext/DB_File/DB_File.c
+ext/DB_File/DB_File.pm.bak
+ext/DB_File/Makefile
+ext/DB_File/blib
+ext/DB_File/constants.h
+ext/DB_File/constants.xs
+ext/DB_File/pm_to_blib
+ext/Data/Dumper/Dumper.bs
+ext/Data/Dumper/Dumper.c
+ext/Data/Dumper/Makefile
+ext/Data/Dumper/pm_to_blib
+ext/DynaLoader/DynaLoader.c
+ext/DynaLoader/DynaLoader.pm
+ext/DynaLoader/DynaLoader.xs
+ext/DynaLoader/Makefile
+ext/DynaLoader/pm_to_blib
+ext/Errno/Errno.pm
+ext/Errno/Makefile
+ext/Errno/pm_to_blib
+ext/Fcntl/Fcntl.bs
+ext/Fcntl/Fcntl.c
+ext/Fcntl/Makefile
+ext/Fcntl/pm_to_blib
+ext/IO/IO.bs
+ext/IO/IO.c
+ext/IO/Makefile
+ext/IO/pm_to_blib
+ext/IPC/SysV/Makefile
+ext/IPC/SysV/SysV.bs
+ext/IPC/SysV/SysV.c
+ext/IPC/SysV/pm_to_blib
+ext/Opcode/Makefile
+ext/Opcode/Opcode.bs
+ext/Opcode/Opcode.c
+ext/Opcode/pm_to_blib
+ext/POSIX/Makefile
+ext/POSIX/POSIX.bs
+ext/POSIX/POSIX.c
+ext/POSIX/pm_to_blib
+ext/SDBM_File/Makefile
+ext/SDBM_File/SDBM_File.bs
+ext/SDBM_File/SDBM_File.c
+ext/SDBM_File/pm_to_blib
+ext/SDBM_File/sdbm/Makefile
+ext/Socket/Makefile
+ext/Socket/Socket.bs
+ext/Socket/Socket.c
+ext/Socket/pm_to_blib
+ext/attrs/Makefile
+ext/attrs/attrs.bs
+ext/attrs/attrs.c
+ext/attrs/pm_to_blib
+ext/re/Makefile
+ext/re/pm_to_blib
+ext/re/re.bs
+ext/re/re.c
+ext/re/re_comp.c
+ext/re/re_exec.c
+lib/B.pm
+lib/B
+lib/Config.pm
+lib/DB_File.pm
+lib/Data
+lib/DynaLoader.pm
+lib/Errno.pm
+lib/ExtUtils/Miniperl.pm
+lib/Fcntl.pm
+lib/IO.pm
+lib/IO
+lib/IPC/Msg.pm
+lib/IPC/Semaphore.pm
+lib/IPC/SysV.pm
+lib/O.pm
+lib/Opcode.pm
+lib/POSIX.pm
+lib/POSIX.pod
+lib/SDBM_File.pm
+lib/Safe.pm
+lib/Socket.pm
+lib/attrs.pm
+lib/auto
+lib/ops.pm
+lib/re.pm
+pod/pod2html
+pod/pod2latex
+pod/pod2man
+pod/pod2text
+t/perl
+utils/c2ph
+utils/h2ph
+utils/h2xs
+utils/perlbug
+utils/perlcc
+utils/perldoc
+utils/pl2pm
+utils/pstruct
+utils/splain
+
